welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:41: error: not found: type yellow
	setCouleurBrosse(c:yellow)
                           ^